# tutorial_django_august

./: .env.example  .gitignore  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language_book_language.py  0003_bookinstance_borrower.py  0004_alter_bookinstance_options.py
catalog/templates/: index.html
catalog/templates/authors/: author_confirm_delete.html  author_form.html
catalog/templates/books/: book_detail.html  book_list_page.html  book_renew_librarian.html  bookinstance_list_borrowed_user.html
catalog/tests/: test_forms.py  test_models.py  test_views.py
locallibrary/: settings.py  urls.py
locallibrary/templates/: base_generic.html  navbar.html  pagination.html
users_and_accounts/: apps.py  urls.py
users_and_accounts/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
